# $Id: configure.in,v 1.4.2.2 2008/08/09 17:51:48 shelton Exp $
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(yui, 3.2.04, citycat4@ngs.ru)
AC_CONFIG_SRCDIR([tyui/yui1.cc])
AC_CONFIG_HEADER([config.h])

# Auxilary scripts
AC_CONFIG_AUX_DIR(cfgaux)

# Check for hostname, etc...
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_CPP

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_C_CONST
AC_HEADER_STDBOOL
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_rdev])
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_GETGROUPS
AC_PROG_GCC_TRADITIONAL
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit bzero dup2 getcwd gethostbyaddr gethostbyname gethostname getpagesize getpass inet_ntoa memchr memmove memset mkdir munmap pow putenv re_comp rint select setenv socket strcasecmp strchr strdup strerror strncasecmp strpbrk strrchr strstr strtol strtoul])

# Checks for common BSD tools
AC_PROG_BSDTOOLS

# Check for cvs2cl.pl script
AC_PROG_CVS2CL_PL

# Check for homedir specification
AC_HOMEDIR

# Check for additonal tools
AC_CHECK_TOOL(CMP, cmp, cmp)
AC_CHECK_TOOL(AR, ar, ar)
AC_CHECK_TOOL(SORT, sort, sort)
AC_CHECK_TOOL(COMPRESS, compress, compress)
AC_CHECK_TOOL(MAKE, make, make)

# Substitute system name (FreeBSD i.e)
SYSTEM=`uname -s`
AC_SUBST(SYSTEM)

# Substitute system arch (i386 i.e)
ARCH=`uname -p`
AC_SUBST(ARCH)

# Generate Makefile's
AC_CONFIG_FILES([Makefile
                 task/Makefile
                 term/Makefile
                 tscr/Makefile
                 twww/Makefile
                 twww/www/Makefile
                 twww/www/lib/Makefile
                 twww/www/lib/grot/Makefile
                 twww/www/www/Makefile
                 tyui/Makefile])
AC_OUTPUT
